; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_store.c_CRYPT_SysRegOpenStoreA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_store.c_CRYPT_SysRegOpenStoreA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"(%ld, %08x, %s)\0A\00", align 1
@ERROR_FILE_NOT_FOUND = common dso_local global i32 0, align 4
@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i8*)* @CRYPT_SysRegOpenStoreA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CRYPT_SysRegOpenStoreA(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32* null, i32** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @debugstr_a(i8* %13)
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %14)
  %16 = load i8*, i8** %7, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %3
  %19 = load i32, i32* @ERROR_FILE_NOT_FOUND, align 4
  %20 = call i32 @SetLastError(i32 %19)
  store i32* null, i32** %4, align 8
  br label %50

21:                                               ; preds = %3
  %22 = load i32, i32* @CP_ACP, align 4
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @MultiByteToWideChar(i32 %22, i32 0, i8* %23, i32 -1, i32* null, i32 0)
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %48

27:                                               ; preds = %21
  %28 = load i32, i32* %8, align 4
  %29 = sext i32 %28 to i64
  %30 = mul i64 %29, 4
  %31 = trunc i64 %30 to i32
  %32 = call i32* @CryptMemAlloc(i32 %31)
  store i32* %32, i32** %10, align 8
  %33 = load i32*, i32** %10, align 8
  %34 = icmp ne i32* %33, null
  br i1 %34, label %35, label %47

35:                                               ; preds = %27
  %36 = load i32, i32* @CP_ACP, align 4
  %37 = load i8*, i8** %7, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = load i32, i32* %8, align 4
  %40 = call i32 @MultiByteToWideChar(i32 %36, i32 0, i8* %37, i32 -1, i32* %38, i32 %39)
  %41 = load i32, i32* %5, align 4
  %42 = load i32, i32* %6, align 4
  %43 = load i32*, i32** %10, align 8
  %44 = call i32* @CRYPT_SysRegOpenStoreW(i32 %41, i32 %42, i32* %43)
  store i32* %44, i32** %9, align 8
  %45 = load i32*, i32** %10, align 8
  %46 = call i32 @CryptMemFree(i32* %45)
  br label %47

47:                                               ; preds = %35, %27
  br label %48

48:                                               ; preds = %47, %21
  %49 = load i32*, i32** %9, align 8
  store i32* %49, i32** %4, align 8
  br label %50

50:                                               ; preds = %48, %18
  %51 = load i32*, i32** %4, align 8
  ret i32* %51
}

declare dso_local i32 @TRACE(i8*, i32, i32, i32) #1

declare dso_local i32 @debugstr_a(i8*) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32* @CryptMemAlloc(i32) #1

declare dso_local i32* @CRYPT_SysRegOpenStoreW(i32, i32, i32*) #1

declare dso_local i32 @CryptMemFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
